# botcompartido

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARQUITECTURA.md  BACKTEST_MOTOR_ML.md  BACKTEST_MOTOR_SERIES_TEMPORALES.md  BACKTEST_MOTOR_TECNICO.md  FASE4_META_MODELO.md  FASE5_SUPERVISOR.md  FASE6_CARTERA.md  FUENTES_DATOS.md  MOTOR_FUNDAMENTAL.md  MOTOR_GEX.md  MOTOR_INSIDER.md  MOTOR_NOTICIAS.md
quantbot/: __init__.py  config.py  logging_setup.py  time_utils.py
quantbot/backtest/: __init__.py  ml_walkforward.py  runner.py  walkforward.py
quantbot/db/: __init__.py  engine.py  models.py
quantbot/engines/: __init__.py  (+10 more)
scripts/: analyze_ml_variants.py  analyze_technical_components.py  analyze_timeseries_variants.py  backtest_ml.py  backtest_technical.py  backtest_timeseries.py  build_bayesian_weights.py  compare_commission_filter.py  cross_validate_sources.py  score_fundamental_universe.py  score_gex_subset.py  score_insider_universe.py  score_news_universe.py  supervisor_smoke.py  validate_data_sources.py
tests/: conftest.py  test_bayesian.py  test_black_litterman.py  test_combine.py  test_commissions.py  test_config.py  test_correlations.py  test_crosscheck.py  test_db_models.py  test_fred.py  test_fundamental.py  test_gex.py  test_insider.py  test_kelly.py  test_logging_setup.py  test_ml_engine.py  test_ml_features.py  test_ml_linear.py  test_news.py  test_news_nlp.py  test_ohlcv.py  test_options.py  test_sizing.py  test_supervisor.py  test_technical.py  test_time_utils.py  test_timeseries.py  test_universe.py  test_walkforward.py
(+14 files in other folders)
